<resources>
    <string name="app_name">MultiMediaMemos</string>
    <string name="action_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="play">Play Audio</string>
    <string name="record">Record Audio</string>
    <string name="memo_hint">add caption</string>
    <string name="save">Save captions</string>
    <string name="delete_icon">X</string>

</resources>