<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <ImageButton
      android:id="@+id/videoBox"
      android:src="@mipmap/ic_launcher"
      android:layout_width="0dp"
      android:minHeight="100dp"
      android:minWidth="100dp"
      android:layout_height="wrap_content"
      tools:src="@tools:sample/avatars"
      android:layout_weight="2"
      android:contentDescription="@string/img_desc"
      />
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingLeft="5dp"
      android:orientation="vertical"
      android:layout_weight="1"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/play"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/record"
            android:layout_weight="1"
            />
      </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/saveBtn"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/save"
          android:layout_weight="4"
          />
      <Button
          android:id="@+id/deleteBtn"
          android:layout_width="50dp"
          android:layout_height="40dp"
          android:text="@string/delete_icon"
          android:textColor="@android:color/holo_red_dark"
          android:layout_weight="0"
          />
    </LinearLayout>
    <EditText
        android:id="@+id/captionEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memo_hint"
        android:inputType="textMultiLine"
        android:lines="2"
        android:gravity="top|start"
        android:scrollbars="vertical"
        />
  </LinearLayout>
</LinearLayout>